--- a/frontpage.css
+++ b/frontpage.css
@@ -2,6 +2,9 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 60px;
   background-color: aquamarine;
+  position: absolute;
+  top: 50px;
+  right: 0px;
 }
