--- a/frontpage.css
+++ b/frontpage.css
@@ -2,7 +2,8 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  font-size: 60px;
+  font-size: 23px;
+  color:white;
   background-color: aquamarine;
   position: absolute;
   top: 50px;
