--- a/frontpage.css
+++ b/frontpage.css
@@ -1,17 +1,22 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  font-size: 23px;
-  color:white;
-  display: inline;
-  background-color: aquamarine;
-  position: absolute;
-  top: 20px;
-  right: 10px;
+
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-a:link {
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
   color: white;
-  text-decoration: none;
 }
