--- a/frontpage.css
+++ b/frontpage.css
@@ -1,17 +1,24 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  font-size: 23px;
+.topnav a {
   color:white;
-  display: inline;
-  background-color: aquamarine;
-  position: absolute;
-  top: 20px;
-  right: 10px;
+  background-color: black;
+  /* text-align: right; */
+  padding: 30px 195px;
+  text-decoration: none;
+  font-family:"Courier New";
+  font-size: 20px;
+  float: right;
+  margin-top: 0px;
 }
 
-a:link {
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
   color: white;
-  text-decoration: none;
 }
