--- a/frontpage.css
+++ b/frontpage.css
@@ -1,15 +1,22 @@
 .topnav a {
   color:white;
-  background-color: black;
-  /* text-align: right; */
-  padding: 30px 195px;
+  text-align: center;
+  padding: 30px 60px; 
+  border-radius: 5px;
+  border: 1px; 
   text-decoration: none;
   font-family:"Courier New";
   font-size: 20px;
   float: right;
   margin-top: 0px;
 }
+.navbar {
+  height: 100px;
+}
 
+.bg-dark {
+  background-color: black;
+}
 
 /* Change the color of links on hover */
 .topnav a:hover {
@@ -22,3 +29,10 @@
   background-color: #4CAF50;
   color: white;
 }
+
+table {
+  width: 100%
+}
+
+
+
