--- a/frontpage.css
+++ b/frontpage.css
@@ -6,7 +6,7 @@
   border: 1px; 
   text-decoration: none;
   font-family:"Courier New";
-  font-size: 20px;
+  font-size: 25px;
   float: right;
   margin-top: 0px;
 }
@@ -31,8 +31,46 @@
 }
 
 table {
-  width: 100%
+  width: 120%;
 }
+
+p {
+  padding-left: 460px;
+}
+
+.center1 {
+  margin-left: auto ;
+  margin-right: auto;
+}
+
+.center2 {
+  margin-left: auto ;
+  margin-right: auto;
+}
+
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+.row {
+  margin-left:-5px;
+  margin-right:-5px;
+}
+
+.column2 {
+  float: center;
+  padding: 5px;
+}
+
+.row {
+  margin-left:-5px;
+  margin-right:-5px;
+}
+
+
 
 
 
