--- a/frontpage.css
+++ b/frontpage.css
@@ -3,10 +3,10 @@
   text-align: center;
   padding: 30px 60px; 
   border-radius: 5px;
-  border: 1px; 
+  border: 5px; 
   text-decoration: none;
   font-family:"Courier New";
-  font-size: 25px;
+  font-size: 20px;
   float: right;
   margin-top: 0px;
 }
@@ -31,6 +31,7 @@
 }
 
 table {
+  margin-top: 20px;
   width: 120%;
 }
 
@@ -39,12 +40,12 @@ p {
 }
 
 .center1 {
-  margin-left: auto ;
+  margin-left: 2%;
   margin-right: auto;
 }
 
 .center2 {
-  margin-left: auto ;
+  margin-left: 6%;
   margin-right: auto;
 }
 
