--- a/frontpage.css
+++ b/frontpage.css
@@ -1,3 +1,7 @@
+html, body {
+    margin: 0;
+    height: 100%;
+}
 .topnav a {
   color:white;
   text-align: center;
@@ -48,21 +52,10 @@ p {
 }
 
 .center2 {
-  margin-left: 6%;
-  margin-right: auto;
+  margin-left: 9%;
+  margin-right: 50%;
 }
 
-
-.column {
-  float: left;
-  width: 50%;
-  padding: 5px;
-}
-
-.row {
-  margin-left:-5px;
-  margin-right:-5px;
-}
 
 
 
