--- a/frontpage.css
+++ b/frontpage.css
@@ -43,19 +43,50 @@ table {
 }
 
 p {
-  padding-left: 460px;
+  color: black;
+  margin-top: 70px;
+  padding-left: 45%;
+  font-family: "Courier New";
+  font-size: 30px;
+}
+
+.region {
+  border-radius: 25px;
+  border: 2px solid black;
+  background-color: black;
+  padding: 20px;
+  width: 200px;
+  height: 30px;
 }
 
 .center1 {
-  margin-left: 2%;
+  margin-left: 13px;
   margin-right: auto;
+  font-family: "Courier New";
+}
+
+.text {
+  text-align: center;
 }
 
 .center2 {
-  margin-left: 9%;
-  margin-right: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: "Courier New";
 }
 
+.statelink a {
+  color: black;
+  text-align: center;
+  padding: 30px 60px; 
+  border-radius: 5px;
+  border: 5px; 
+  text-decoration: none;
+  font-family:"Courier New";
+  font-size: 20px;
+  float: right;
+  margin-top: 0px;
+}
 
 
 
