--- a/frontpage.css
+++ b/frontpage.css
@@ -20,9 +20,17 @@ html, body {
 }
 .navbar {
   height: 100px;
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
 }
 .navbar-custom {
   background-color: black;
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
 }
 
 .bg-dark {
@@ -42,28 +50,34 @@ html, body {
 }
 
 table {
-  margin-top: 20px;
-  width: 120%;
+  /* margin-top: 20px;
+  width: 120%; */
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
 }
 
-
-.region {
+p {
   color: black;
-  margin-top: 70px;
-  padding-left: 45%;
+  /* margin-top: 70px;
+  padding-left: 45%; */
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
   font-family: "Courier New";
   font-size: 30px;
-  border-radius: 25px;
-  border: 2px solid black;
-  background-color: black;
-  padding: 20px;
-  width: 200px;
-  height: 30px;
+
 }
 
 .center1 {
-  margin-left: 5%;
-  margin-right: auto;
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
+  /* margin-left: 5%;
+  margin-right: auto; */
   font-family: "Courier New";
 }
 
@@ -72,22 +86,30 @@ table {
 }
 
 .center2 {
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
   font-family: "Courier New";
 }
 
 .statelink a {
   color: black;
   text-align: center;
-  padding: 30px 60px; 
-  border-radius: 5px;
-  border: 5px; 
+  /* padding: 30px 60px;  */
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
+  /* border-radius: 5px;
+  border: 5px;  */
   text-decoration: none;
   font-family:"Courier New";
   font-size: 20px;
-  float: right;
-  margin-top: 0px;
+  /* float: right; */
+  /* margin-top: 0px; */
 }
 
 
