--- a/frontpage.css
+++ b/frontpage.css
@@ -1,6 +1,10 @@
 html, body {
-    margin: 0;
-    height: 100%;
+    /* margin: 0;
+    height: 100%; */
+    padding: 1vw;
+    padding: 1vh;
+    padding: 1vmin;
+    padding: 1vmax;
 }
 .topnav a {
   color:white;
@@ -15,11 +19,11 @@ html, body {
   text-decoration: none;
   font-family:"Courier New";
   font-size: 20px;
-  float: right;
-  margin-top: 0px;
+  /* float: right; */
+  /* margin-top: 0px; */
 }
 .navbar {
-  height: 100px;
+  /* height: 100px; */
   padding: 1vw;
   padding: 1vh;
   padding: 1vmin;
@@ -35,18 +39,30 @@ html, body {
 
 .bg-dark {
   background-color: black;
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
+  padding: 1vw;
+  padding: 1vh;
+  padding: 1vmin;
+  padding: 1vmax;
 }
 
 table {
