--- a/frontpage.css
+++ b/frontpage.css
@@ -50,7 +50,7 @@ td, th {
 		font-weight: 200;
 }
 
-p {
+/* p {
   	margin: auto;
 		font-size: 1.50em;
 		font-weight: 200;
@@ -62,5 +62,5 @@ p {
   	border: 1px rgb(80, 153, 183);;
   	border-radius: 30px; 
   	margin-bottom: 50px;
-}
+} */
 
