--- a/frontpage.css
+++ b/frontpage.css
@@ -14,7 +14,7 @@ body {
   text-align: center; 
   padding: 14px 16px; /* DANGER */
   text-decoration: none;
-  font-size: 17px;
+  font-size: 15px;
 }
 
 .topnav a:hover {
@@ -37,7 +37,7 @@ table {
 
 td ,th {
 	text-align: center;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 td {
@@ -49,6 +49,10 @@ th {
 
 .h1 {
   padding-left: 50px;
+}
+
+.h4 {
+	color: rgb(80, 153, 183);
 }
 
 .contact-heading {
